Style the form using css and add classes in html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Odin Sign-up</title>
   </head>
   <body>
@@ -14,39 +15,46 @@
           ODIN
         </div>
       </aside>
-      <article>
+      <article class="content">
         <header>
           This is not a real online service! You know you need something like
           this in your life to help you realize you deepest dreams. <br />
-          Sign up <em>now</em> to get started.
+          Sign up <em>now</em> to get started. <br />
+          <p>You <em>know</em> you want to.</p>
         </header>
         <section>
           <h2>Let's do this</h2>
           <form action="/index.html" method="get">
-            <article>
-              <div class="form-field">
-                <label for="first-name">First name</label>
-                <input type="text" id="first-name" />
+            <article class="form-inputs">
+              <div class="input-row">
+                <div class="form-field">
+                  <label for="first-name">First name</label>
+                  <input type="text" id="first-name" required />
+                </div>
+                <div class="form-field">
+                  <label for="last-name">Last name</label>
+                  <input type="text" id="last-name" required />
+                </div>
               </div>
-              <div class="form-field">
-                <label for="last-name">Last name</label>
-                <input type="text" id="last-name" />
+              <div class="input-row">
+                <div class="form-field">
+                  <label for="email">Email</label>
+                  <input type="email" id="email" required />
+                </div>
+                <div class="form-field">
+                  <label for="phone">Phone number</label>
+                  <input type="text" id="phone" required />
+                </div>
               </div>
-              <div class="form-field">
-                <label for="email">Email</label>
-                <input type="email" id="email" />
-              </div>
-              <div class="form-field">
-                <label for="phone">Phone number</label>
-                <input type="text" id="phone" />
-              </div>
-              <div class="form-field">
-                <label for="password">Password</label>
-                <input type="password" id="password" />
-              </div>
-              <div class="form-field">
-                <label for="cnf-password">Confirm Password</label>
-                <input type="password" id="cnf-password" />
+              <div class="input-row">
+                <div class="form-field">
+                  <label for="password">Password</label>
+                  <input type="password" id="password" required />
+                </div>
+                <div class="form-field">
+                  <label for="cnf-password">Confirm Password</label>
+                  <input type="password" id="cnf-password" required />
+                </div>
               </div>
             </article>
             <button type="submit">Create Account</button>
