--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header>
         <section>
           <h2>Let's do this</h2>
-          <form action="/index.html" method="get">
+          <form id="form" action="/index.html" method="get">
             <article class="form-inputs">
               <div class="input-row">
                 <div class="form-field">
@@ -57,6 +57,7 @@
                 </div>
               </div>
             </article>
+            <div class="error"></div>
             <button type="submit">Create Account</button>
           </form>
           <p>
@@ -65,5 +66,6 @@
         </section>
       </article>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
